Change package name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "galaxy-fds-nodejs",
-  "version": "0.1.0",
-  "private": true,
+  "name": "galaxy-fds-sdk-nodejs",
+  "version": "0.2.0",
   "scripts": {
     "test": "mocha"
   },
